<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Morsel</string>
    <string name="itemresult">ItemResult</string>
    <string name="search_hint">Search food</string>
    <string name="food_selection_item">Food Selection Item</string>
    <string name="foodName">Name</string>
    <string name="nahrungsmittel">Nahrungsmittel</string>
    <string name="menge">Menge</string>
    <string name="kh_pro_menge">KH pro Menge</string>
    <string name="bread_unit">Brot Einheiten</string>
    <string name="ok">OK</string>
    <string name="total">Gesamt:</string>
    <string name="card_view_item_food_name">Food Name</string>
    <string name="card_view_item_food_be_info">Food BE Info</string>
    <string name="edit_food_item">Ändern</string>
    <string name="delete_food_item">Löschen</string>
    <string name="totelBreadUnitHint">Gesamt: 0.0 BE</string>
    <string name="snackbar_parse_error">Ungültiges Format! Wähle richtige Datei aus!</string>
    <string-array name="unit_array">
        <item>g</item>
        <item>ml</item>
    </string-array>
</resources>