<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/foodName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nahrungsmittel"
        app:layout_constraintStart_toEndOf="@id/textViewName"
        app:layout_constraintBottom_toBottomOf="@id/textViewName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/menge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@id/textViewAmount"
        app:layout_constraintBottom_toBottomOf="@id/textViewAmount"/>

    <Spinner
        android:id="@+id/spinnerUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/editTextAmount"
        app:layout_constraintBottom_toBottomOf="@id/editTextAmount"/>

    <TextView
        android:id="@+id/textViewKH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kh_pro_menge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAmount"/>

    <EditText
        android:id="@+id/editTextCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@id/textViewKH"
        app:layout_constraintBottom_toBottomOf="@id/textViewKH"/>

    <TextView
        android:id="@+id/textViewBEs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bread_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewKH" />

    <EditText
        android:id="@+id/editTextBEs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@id/textViewBEs"
        app:layout_constraintBottom_toBottomOf="@id/textViewBEs"/>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/editTextBEs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>